--- a/public/assets/sass/app.scss
+++ b/public/assets/sass/app.scss
@@ -9,9 +9,14 @@ textarea {
   }
 }
 main {
-  button.back {
-    margin: {
-      top: 3rem;
+  margin: {
+    top: 3.5rem;
+  }
+  button {
+    &.back {
+      margin: {
+        top: 3rem;
+      }
     }
   }
   #output {
@@ -25,5 +30,112 @@ main {
     }
     margin: 1rem 0;
     padding: 1rem;
+  }
+  #demo-js-container {
+    .module-title {
+      a {
+        border-bottom: thin solid #eee;
+        display: block;
+        margin-top: 0.9375rem;
+        margin-bottom: 0.375;
+        padding-bottom: 0.25rem;
+      }
+    }
+  }
+  #house-detail {
+    border: medium solid #ddd;
+    border-radius: 0.25rem;
+    margin-top: 1.25rem;
+    padding: 1.25rem;
+    .logo {
+      margin-bottom: 0.9375rem;
+    }
+    .command {
+      margin-top: 0.9375rem;
+      border-top: thin solid #eee;
+      padding-top: 0.9375rem;
+    }
+    .street-address {
+      margin-bottom: 0.9375rem;
+      h2 {
+        margin-bottom: 0.125rem;
+      }
+    }
+  }
+  #house-detail {
+    h3 {
+      color: #999;
+      font-size: .75rem;
+      margin-bottom: 0.125rem;
+      text-transform: uppercase;
+    }
+    th {
+      width: 20%;
+    }
+  }
+  .form-section {
+    margin-top: 0.625rem;
+    > h3 {
+      margin-top: 1.25rem;
+    }
+  }
+  .linked-rows {
+    a {
+      border:1px solid #fff;
+      display: block;
+      border-radius: 0.375;
+      color: inherit;
+      &:hover {
+        border:1px solid #eee;
+        background-color: #eee;
+      }
+    }
+    .row {
+      padding: 15px;
+    }
+  }
+  a > .row {
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
+  label {
+    cursor: pointer;
+  }
+  pre {
+    font-size: 1rem;
+    margin-top: 0.625rem;
+  }
+  img {
+    &.center {
+      display: block;
+      margin: auto;
+    }
+  }
+  footer {
+    border-top: 1px solid #eee;
+    color: #999;
+    margin: 25px;
+    margin-top: 100px;
+    text-align: center;
+    padding:45px;
+  }
+
+  .clear {
+    clear:both;
+  }
+  .hide-me {
+    display: none;
+  }
+  .highlight {
+    background-color: #ff9;
+    padding: 6px;
+    margin: 3px;
+  }
+  .bordered {
+    border:6px solid #999;
+    border-radius: 6px;
+  }
+  .expanded {
+    letter-spacing: 2.5px;
   }
 }
